// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POCL validation error service createPoclValidationError creates the validation record 1`] = `
Object {
  "amount": 30,
  "birthDate": "1989-07-01",
  "channelId": "948594",
  "concessions": "[{\\"type\\":\\"Blue Badge\\",\\"referenceNumber\\":\\"123456789\\"}]",
  "country": Object {
    "description": "GB-ENG",
    "id": 1050,
    "label": "uk_eng",
  },
  "dataSource": Object {
    "description": "DDE File",
    "id": 1020,
    "label": "dde_file",
  },
  "email": "daniel-ricc@example.com",
  "errorMessage": "Error",
  "firstName": "Daniel",
  "lastName": "Ricciardo",
  "methodOfPayment": Object {
    "description": "Cash",
    "id": 1010,
    "label": "cash",
  },
  "mobilePhone": "07722 123456",
  "organisation": "Fishy Endeavours",
  "paymentSource": Object {
    "description": "Direct Debit",
    "id": 1040,
    "label": "direct_debit",
  },
  "permitId": "test-permit-id",
  "postalFulfilment": true,
  "postcode": "BS9 1HJ",
  "preferredMethodOfConfirmation": Object {
    "description": "Email",
    "id": 1030,
    "label": "e-mail",
  },
  "preferredMethodOfNewsletter": Object {
    "description": "Prefer not to be contacted",
    "id": 1031,
    "label": "prefer_no_contact",
  },
  "preferredMethodOfReminder": Object {
    "description": "Text",
    "id": 1032,
    "label": "sms",
  },
  "premises": "14 Howecroft Court",
  "serialNumber": "14345-48457J",
  "startDate": "2021-06-15",
  "status": Object {
    "description": "Needs Review",
    "id": 1000,
    "label": "needs_review",
  },
  "street": "Eastmead Lane",
  "town": "Bristol",
  "transactionDate": undefined,
  "transactionFile": "test-pocl-file.xml",
}
`;

exports[`POCL validation error service getPoclValidationErrors returns the entities retrieved from Dynamics 1`] = `
Array [
  Object {
    "test": "result",
  },
  Object {
    "another": "result",
  },
]
`;

exports[`POCL validation error service updatePoclValidationError when validation error record exists and status is not provided updates the validation record 1`] = `
Object {
  "PaymentSource": undefined,
  "amount": 30,
  "birthDate": "1989-07-01",
  "channelId": "948594",
  "concessions": "[{\\"type\\":\\"Blue Badge\\",\\"referenceNumber\\":\\"123456789\\"}]",
  "country": Object {
    "description": "GB-ENG",
    "id": 1050,
    "label": "uk_eng",
  },
  "dataSource": Object {
    "description": "DDE File",
    "id": 1020,
    "label": "dde_file",
  },
  "email": "daniel-ricc@example.com",
  "errorMessage": "Invalid email address",
  "firstName": "Daniel",
  "lastName": "Ricciardo",
  "methodOfPayment": Object {
    "description": "Cash",
    "id": 1010,
    "label": "cash",
  },
  "mobilePhone": "07722 123456",
  "organisation": "Fishy Endeavours",
  "paymentSource": Object {
    "description": "Direct Debit",
    "id": 1040,
    "label": "direct_debit",
  },
  "paymentSourceUV": "Direct Debit",
  "permitId": "test-permit-id",
  "postalFulfilment": true,
  "postcode": "BS9 1HJ",
  "preferredMethodOfConfirmation": Object {
    "description": "Email",
    "id": 1030,
    "label": "e-mail",
  },
  "preferredMethodOfNewsletter": Object {
    "description": "Prefer not to be contacted",
    "id": 1031,
    "label": "prefer_no_contact",
  },
  "preferredMethodOfReminder": Object {
    "description": "Text",
    "id": 1032,
    "label": "sms",
  },
  "premises": "14 Howecroft Court",
  "serialNumber": "14345-48457J",
  "startDate": "2021-06-15",
  "startDateUV": "2021-06-15",
  "status": Object {
    "description": "Needs Review",
    "id": 1000,
    "label": "needs_review",
  },
  "street": "Eastmead Lane",
  "timestamp": "2020-01-01T14:00:00Z",
  "town": "Bristol",
  "transactionDate": undefined,
  "transactionFile": "test-pocl-file.xml",
}
`;

exports[`POCL validation error service updatePoclValidationError when validation error record exists and status is processed updates the validation record 1`] = `
Object {
  "PaymentSource": undefined,
  "amount": 30,
  "birthDate": "1989-07-01",
  "channelId": "948594",
  "concessions": "[{\\"type\\":\\"Blue Badge\\",\\"referenceNumber\\":\\"123456789\\"}]",
  "country": Object {
    "description": "GB-ENG",
    "id": 1050,
    "label": "uk_eng",
  },
  "dataSource": Object {
    "description": "DDE File",
    "id": 1020,
    "label": "dde_file",
  },
  "email": "daniel-ricc@example.com",
  "errorMessage": "Invalid email address",
  "firstName": "Daniel",
  "lastName": "Ricciardo",
  "methodOfPayment": Object {
    "description": "Cash",
    "id": 1010,
    "label": "cash",
  },
  "mobilePhone": "07722 123456",
  "organisation": "Fishy Endeavours",
  "paymentSource": Object {
    "description": "Direct Debit",
    "id": 1040,
    "label": "direct_debit",
  },
  "paymentSourceUV": "Direct Debit",
  "permitId": "test-permit-id",
  "postalFulfilment": true,
  "postcode": "BS9 1HJ",
  "preferredMethodOfConfirmation": Object {
    "description": "Email",
    "id": 1030,
    "label": "e-mail",
  },
  "preferredMethodOfNewsletter": Object {
    "description": "Prefer not to be contacted",
    "id": 1031,
    "label": "prefer_no_contact",
  },
  "preferredMethodOfReminder": Object {
    "description": "Text",
    "id": 1032,
    "label": "sms",
  },
  "premises": "14 Howecroft Court",
  "serialNumber": "14345-48457J",
  "startDate": "2021-06-15",
  "startDateUV": "2021-06-15",
  "stateCode": 1,
  "status": Object {
    "description": "Processed",
    "id": 1001,
    "label": "processed",
  },
  "street": "Eastmead Lane",
  "timestamp": "2020-01-01T14:00:00Z",
  "town": "Bristol",
  "transactionDate": undefined,
  "transactionFile": "test-pocl-file.xml",
}
`;
